# Scrumdidly

./: CMakeLists.txt  Ellipse.cpp  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Polyline.h  README.md  Rectangle.cpp  Shape.h  canvas.cpp  main.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  renderscreen.cpp  renderscreen.h  serializer.cpp  serializer.h  shape.cpp  shape.h  shapeeditor.cpp  shapeeditor.ui  vector.h
ENTIRE PROJ + LOGIN PERMS/: CMakeLists.txt  Line.cpp  Line.h  Polygon.h  Rectangle.cpp  Rectangle.h  aboutus.cpp  loginwindow.ui  mainwindow.h  parser.cpp  renderscreen.h  renderscreen.ui  shapeeditor.cpp  shapeeditor.ui  shapes.txt
FINAL PROJECT/: CMakeLists.txt  Line.h  Polyline.h  canvas.cpp  canvas.h  loginwindow.cpp  parser.h  renderscreen.cpp  renderscreen.h  serializer.cpp  serializer.h  shapeeditor.cpp  sorting.h  vector.h
FinalFINAL PROJ/: Ellipse.h  Polygon.h  Rectangle.h  Shape.h  Text.h  canvas.cpp  main.cpp  renderscreen.cpp  renderscreen.ui  shapeeditor.h  sorting.cpp
Gryuum 10/: Ellipse.h  Polygon.cpp  Polyline.h  Shape.h  renderscreen.cpp  renderscreen.h  serializer.cpp  serializer.h
Gryuum 5/: Line.cpp  Rectangle.h  Shape.h  loginwindow.ui  parser.cpp  shapeeditor.h
Gryuuum 6/: Ellipse.h  Ellispe.cpp  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h  Shape.h  canvas.h  renderscreen.cpp  renderscreen.h  shapeeditor.cpp  shapeeditor.h  shapeeditor.ui
Gryuuum 7/: Ellipse.h  Line.cpp  Line.h  Polygon.h  Polyline.cpp  Polyline.h  Rectangle.h  Shape.h  Text.h  resources.qrc  shapeeditor.ui
Gryuuum 8/: CMakeLists.txt  Ellipse.h  Line.h  Polygon.h  Polyline.h  Rectangle.h  aboutus.ui  parser.cpp  renderscreen.cpp  shapeeditor.cpp  shapeeditor.h
Gryuuum 9/: CMakeLists.txt  Ellipse.h  Ellispe.cpp  Polygon.h  Text.h  aboutus.h  parser.cpp  shapeeditor.cpp  shapeeditor.ui
Gryuuum Proj/: CMakeLists.txt  Ellipse.h  Polygon.h  Polyline.h  Rectangle.h  Shape.h  Text.h  loginwindow.h  renderscreen.cpp  renderscreen.h  renderscreen.ui  shapeeditor.cpp  shapeeditor.ui  vector.h
Gryuuum Proj 4./: CMakeLists.txt  Ellipse.h  Line.h  Polygon.cpp  renderscreen.cpp  renderscreen.h  shapeeditor.cpp  shapeeditor.ui
arman/: globals.cpp  globals.h  loginwindow.cpp  loginwindow.h  renderscreen.cpp
loginWINDOW/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainscreen.cpp  mainscreen.h  mainscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderscreen.cpp  renderscreen.h  renderscreen.ui
loginWINDOW/arman-jibran/: CMakeLists.txt  Polyline.cpp  Text.h  Vector.h  aboutus.cpp  aboutus.h  loginwindow.cpp  renderscreen.cpp  renderscreen.h  renderscreen.ui  (+2 more)
